[PL] Translate Sicilian Dragon

--- a/translations/castle_two_knights_defense.tex/pl.po
+++ b/translations/castle_two_knights_defense.tex/pl.po
@@ -303,7 +303,7 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\textbf{1 × Początkowy (IV--V) Kafelek Mapy}\n"
+"\\textbf{1 × Początkowy (I) Kafelek Mapy}\n"
 "\\begin{itemize}\n"
 "  \\item 1 × Nekropolia (S1)\n"
 "\\end{itemize}\n"
