--- a/campaigns/castle_sicilian_dragon.tex
+++ b/campaigns/castle_sicilian_dragon.tex
@@ -1,7 +1,7 @@
 % !TeX spellcheck = en_US
 \addscenariosection[subsection]{1}{Castle Campaign $-$ The Queen's Gambit}{2. Sicilian Dragon}{\images/catherine.png}
 
-\begin{multicols*}{2}
+\begin{multicols}{2}
 
 \textbf{Author:} Tyson Heckert
 
@@ -91,10 +91,6 @@ Place a Necropolis Hero on the center Field of the S1 Necropolis Tile.
   \item You run out of time at the end of the 11th Round
 \end{itemize}
 
-\end{multicols*}
-
-\begin{multicols}{2}
-
 \subsection*{\MakeUppercase{Timed Events}}
 
 \textbf{\nth{1} Round:}
@@ -126,8 +122,6 @@ During this Castle campaign Scenario, the following rules apply:
   \item Your Hero's maximum Level is 6
   \item All buildings are unavailable, building is not possible
 \end{itemize}
-
-\columnbreak
 
 \begin{itemize}
 \item All neutral enemies fight using the Neutral Enemy Deck.
@@ -226,7 +220,7 @@ She looked back at the ragtag group of forces she'd gathered and hoped it would 
 \begin{itemize}
   \item \textcolor{darkcandyapplered}{Add a Few Archangels to your army.}
   \item \textcolor{darkcandyapplered}{You may now teleport to the enemy town on Tile S1.
-  If you choose not to, you may in the future by spending one movement at this Obelisk.}
+    If you choose not to, you may in the future by spending one \svgeven{movement} at this Obelisk.}
 \end{itemize}
 
 
