Update translations + consistend dialogues

--- a/translations/castle_greek_gift.tex/pl.po
+++ b/translations/castle_greek_gift.tex/pl.po
@@ -431,7 +431,7 @@ msgid ""
 msgstr ""
 "\\textbf{Runda 1.:}\n"
 "\\begin{itemize}\n"
-"  \\item Przeczytaj fragment ,,Odległe Zagrożenie''\n"
+"  \\item Przeczytaj fragment ,,odległe zagrożenie''\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -447,7 +447,7 @@ msgid ""
 msgstr ""
 "\\textbf{Przy wejściu do Osady na Kafelku F3:}\n"
 "\\begin{itemize}\n"
-"  \\item Przeczytaj fragment ,,Oddani Sojusznicy''\n"
+"  \\item Przeczytaj fragment ,,Oddani sojusznicy''\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -463,7 +463,7 @@ msgid ""
 msgstr ""
 "\\textbf{Przed walką z wrogim Bohaterem:}\n"
 "\\begin{itemize}\n"
-"  \\item Przeczytaj fragment ,,Podstępna Zamiana''\n"
+"  \\item Przeczytaj fragment ,,Podstępna zamiana''\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -479,7 +479,7 @@ msgid ""
 msgstr ""
 "\\textbf{Po zakończeniu Scenariusza:}\n"
 "\\begin{itemize}\n"
-"  \\item Przeczytaj fragment ,,Pościg Rozpoczęty''\n"
+"  \\item Przeczytaj fragment ,,Pościg rozpoczęty''\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -502,7 +502,7 @@ msgid ""
 "During this Castle campaign Scenario, the following rules apply:\n"
 "\n"
 msgstr ""
-"W trakcie Scenariusza kampanii Zamku obowiązują następujące zasady:\n"
+"W trakcie tego Scenariusza kampanii Zamku obowiązują następujące zasady:\n"
 "\n"
 
 #. type: multicols
@@ -569,7 +569,7 @@ msgid ""
 "\\textbf{Distant Threat}\n"
 "\n"
 msgstr ""
-"\\textbf{Odległe Zagrożenie}\n"
+"\\textbf{odległe zagrożenie}\n"
 "\n"
 
 #. type: multicols*
@@ -677,7 +677,7 @@ msgid ""
 "\\textbf{Reverent Allies}\n"
 "\n"
 msgstr ""
-"\\textbf{Oddani Sojusznicy}\n"
+"\\textbf{Oddani sojusznicy}\n"
 "\n"
 
 #. type: multicols*
@@ -735,7 +735,7 @@ msgid ""
 "\n"
 msgstr ""
 "Głosem głębszym i bardziej donośnym niż u jakiegokolwiek mężczyzny, anioł jako pierwszy przemówił.\\\\\n"
-"\\dialog Królowo Katarzyno. Spodziewałem się, że przybędziesz, gdy dostrzegłem, jak zgnilizna na wzgórzach nabiera kształtów.\n"
+"\\dialog{Królowo Katarzyno. Spodziewałem się, że przybędziesz, gdy dostrzegłem, jak zgnilizna na wzgórzach nabiera kształtów.}\n"
 "\n"
 
 #. type: multicols*
@@ -751,8 +751,8 @@ msgid ""
 msgstr ""
 "Katarzyna odpowiedziała uśmiechem.\n"
 "Dobrze było widzieć, że wciąż ma sojuszników; jej siły wymagały wzmocnienia, by stawić czoła nieumarłym.\\\\\n"
-"\\dialog Miło cię widzieć, przyjacielu -- powiedziała -- Wygląda na to, że Steadwick znów jest zagrożone, a ja ruszam, by wyplenić zło, zanim zdąży zapuścić korzenie.\n"
-"Czy dołączysz do mnie?\n"
+"\\dialog{Miło cię widzieć, przyjacielu -- powiedziała -- Wygląda na to, że Steadwick znów jest zagrożone, a ja ruszam, by wyplenić zło, zanim zdąży zapuścić korzenie.\n"
+"Czy dołączysz do mnie?}\n"
 "\n"
 
 #. type: multicols*
@@ -766,7 +766,7 @@ msgid ""
 "Catherine smiled wide as she watched more angels appear, then looked back to her forces and extended an open palmed arm forward in a command to march.\n"
 "\n"
 msgstr ""
-"\\dialog Oczywiście, moja królowo! -- wykrzyknął anioł -- Razem żadne zło nas nie zatrzyma!\\\\\n"
+"\\dialog{Oczywiście, moja królowo! -- wykrzyknął anioł -- Razem żadne zło nas nie zatrzyma!}\\\\\n"
 "Gdy tylko ostatnie słowa opuściły jego usta i zaczęły rozbrzmiewać echem, dobył swoją broń.\n"
 "Ostrze długiego miecza zapłonęło, gdy tylko opuściło pochwę, a jego oślepiająca chwała sprawiła, że większość klęczących odwróciła wzrok.\n"
 "Zaraz potem wzbił się w powietrze i zaczął krążyć po okolicy.\n"
@@ -790,7 +790,7 @@ msgid ""
 "\\textbf{Bait And Switch}\n"
 "\n"
 msgstr ""
-"\\textbf{Podstępna Zamiana}\n"
+"\\textbf{Podstępna zamiana}\n"
 "\n"
 
 #. type: multicols*
@@ -892,7 +892,7 @@ msgid ""
 "\\textbf{The Chase Begins}\n"
 "\n"
 msgstr ""
-"\\textbf{Pościg Rozpoczęty}\n"
+"\\textbf{Pościg rozpoczęty}\n"
 "\n"
 
 #. type: multicols*
@@ -968,7 +968,7 @@ msgid ""
 "\n"
 msgstr ""
 "Katarzyna uniosła głowę ku niebu. Archanioły krążyły nad nią. Łzy zbierały się jej w oczach na myśl o utracie tego, nad czym tak ciężko pracowała.\\\\\n"
-"\\dialog Znajdźcie go! -- ryknęła, zwracając się do jakichkolwiek bogów, którzy mogli słyszeć, oraz do aniołów nad nią.\n"
+"\\dialog{Znajdźcie go! -- ryknęła, zwracając się do jakichkolwiek bogów, którzy mogli słyszeć, oraz do aniołów nad nią.}\n"
 "\n"
 
 #. type: multicols*
@@ -978,7 +978,7 @@ msgid ""
 "``Is that… wise?'' Rion asked softly.\n"
 "\n"
 msgstr ""
-"\\dialog Czy to… rozsądne? -- spytał cicho Rion.\n"
+"\\dialog{Czy to... rozsądne? -- spytał cicho Rion.}\n"
 "\n"
 
 #. type: multicols*
@@ -992,8 +992,9 @@ msgid ""
 "\n"
 msgstr ""
 "W oczach Katarzyny płonął ogień.\\\\\n"
-"\\dialog Na co zdać się może odbudowa, skoro ten nikczemnik będzie dalej knuł swoje intrygi? -- powiedziała -- Nie.\n"
-"Jeśli chcemy ocalić Steadwick, musimy go zniszczyć, zanim zdoła zebrać większe siły.\n"
+"\\dialog{Na co zdać się może odbudowa, skoro ten nikczemnik będzie dalej knuł swoje intrygi? -- powiedziała -- Nie.\n"
+"Jeśli chcemy ocalić Steadwick, musimy go zniszczyć, zanim zdoła zebrać większe siły.}\n"
+"\\vspace*{0.3em}\n"
 "\n"
 
 #. type: multicols*
