--- a/translations/castle_two_knights_defense.tex/pl.po
+++ b/translations/castle_two_knights_defense.tex/pl.po
@@ -245,7 +245,7 @@ msgid ""
 "During this Castle campaign Scenario, the following rules apply:\n"
 "\n"
 msgstr ""
-"W trakcie Scenariusza kampanii Zamku obowiązują następujące zasady:\n"
+"W trakcie tego Scenariusza kampanii Zamku obowiązują następujące zasady:\n"
 "\n"
 
 #. type: multicols*
@@ -638,8 +638,8 @@ msgid ""
 "\n"
 msgstr ""
 "Chwilę później Rion podbiegł do niej, chcąc przekazać wieści o nowych gościach.\\\\\n"
-"\\dialog Królowo Katarzyno! -- zawołał podekscytowany -- Lordowie z okolic Steadwick dowiedzieli się o tragedii i przysłali nam swoich czempionów na pomoc.\n"
-"Rycerze spędzili dni tropiąc i próbując nas dogonić, by do nas dołączyć i towarzyszyć do końca kampanii.\n"
+"\\dialog{Królowo Katarzyno! -- zawołał podekscytowany -- Lordowie z okolic Steadwick dowiedzieli się o tragedii i przysłali nam swoich czempionów na pomoc.\n"
+"Rycerze spędzili dni tropiąc i próbując nas dogonić, by do nas dołączyć i towarzyszyć do końca kampanii.}\n"
 "\n"
 
 #. type: multicols*
@@ -650,8 +650,8 @@ msgid ""
 "``Then tell them to get ready; the race is on.''\n"
 "\n"
 msgstr ""
-"Katarzyna uśmiechnęła się szeroko.\\\\\n"
-"\\dialog W takim razie powiedz im, żeby się przygotowali; wyścig się zaczyna.\n"
+"Katarzyna uśmiechnęła się szeroko.\n"
+"\\dialogg{W takim razie powiedz im, żeby się przygotowali; wyścig się zaczyna.}\n"
 "\n"
 
 #. type: multicols*
@@ -682,8 +682,8 @@ msgid ""
 "Necromantic energy had stripped the flesh from him long ago; without that power, his presence and ill-willed malevolence were gone as well.\n"
 "\n"
 msgstr ""
-"Połamane szczątki Vhidhaxa nie wyglądały bardziej okazale niż jakikolwiek z jego wielu sług.\n"
-"Nekromantyczna energia pozbawiła go ciała już dawno temu; bez tej mocy zniknęła też jego złowroga obecność i nikczemność.\n"
+"Połamane szczątki Vhidhaxa nie wyglądały bardziej okazale niż jakiekolwiek należące do jego wielu sług.\n"
+"Energia nekrotyczna pozbawiła go ciała już dawno temu; bez tej mocy zniknęła też jego złowroga obecność i nikczemność.\n"
 "\n"
 
 #. type: multicols*
@@ -749,7 +749,7 @@ msgid ""
 "\\textbf{A Queen's Fury}\n"
 "\n"
 msgstr ""
-"\\newpage\\textbf{Gniew Królowej}\n"
+"\\newpage\\textbf{Gniew królowej}\n"
 "\n"
 
 #. type: multicols*
@@ -799,7 +799,7 @@ msgid ""
 "\\textbf{A Queen's Right}\n"
 "\n"
 msgstr ""
-"\\textbf{Prawo Królowej}\n"
+"\\textbf{Prawo królowej}\n"
 "\n"
 
 #. type: multicols*
@@ -844,10 +844,8 @@ msgid ""
 "``Well? Are we going inside?'' he asked curiously.\n"
 "\n"
 msgstr ""
-"\\vspace*{-0.3em}\n"
-"Rion szybko podjechał, jadąc kłusem na swoim wierzchowcu.\\\\\n"
-"\\dialog I co? Wchodzimy do środka? -- zapytał.\n"
-"\\vspace*{-0.3em}\n"
+"Rion szybko podjechał, jadąc kłusem na swoim wierzchowcu.\n"
+"\\dialogg{I co? Wchodzimy do środka? -- zapytał.}\n"
 "\n"
 
 #. type: multicols*
@@ -860,10 +858,10 @@ msgid ""
 "Gods know we need it…''\n"
 "\n"
 msgstr ""
-"\\hspace*{-0.3em}\\dialog Nie ma takiej potrzeby -- odparła Katarzyna -- \n"
+"\\dialogg{Nie ma takiej potrzeby -- odparła Katarzyna -- \n"
 "Widziałam to w jej oczach; smoczyca wie, co dziś zrobiliśmy.\n"
 "Mamy ich wdzięczność, a być może i przysługę do wykorzystania w przyszłości.\n"
-"Bogowie raczą wiedzieć, że jej potrzebujemy...\n"
+"Bogowie raczą wiedzieć, że jej potrzebujemy...}\n"
 "\n"
 
 #. type: multicols*
@@ -885,7 +883,7 @@ msgid ""
 "\\textbf{A Queen's Lament}\n"
 "\n"
 msgstr ""
-"\\textbf{Lament Królowej}\n"
+"\\textbf{Lament królowej}\n"
 "\n"
 
 #. type: multicols*
