--- a/campaigns/castle_sicilian_dragon.tex
+++ b/campaigns/castle_sicilian_dragon.tex
@@ -118,21 +118,16 @@ Place a Necropolis Hero on the center Field of the S1 Necropolis Tile.
 During this Castle campaign Scenario, the following rules apply:
 
 \begin{itemize}
-  \item The enemy army does not move
-  \item Your Hero's maximum Level is 6
-  \item All buildings are unavailable, building is not possible
-\end{itemize}
-
-\begin{itemize}
-\item All neutral enemies fight using the Neutral Enemy Deck.
-\item Each time you visit a Trading Post, draw the top Cards from the \svgunit{bronze} bronze, \svgunit{silver} silver, and \svgunit{golden} golden neutral enemy Decks.
-You may recruit any, or all of them by paying their cost.
-Shuffle any un-hired ones back into their Decks.
-
-\item The Grail may be sold at a trading post for 30 \svgunit{gold} \textit{or} \textbf{Search (3)} the relic Deck, twice.
-
-\item When fighting the enemy at thier Town, they have a Citadel.
-Don't forget to add the walls and arrow tower to make the battle a siege.
+  \item The enemy army does not move.
+  \item Your Hero's maximum Level is 6.
+  \item All buildings are unavailable, building is not possible.
+  \item All neutral enemies fight using the Neutral Enemy Deck.
+  \item Each time you visit a Trading Post, draw the top Cards from the \svgunit{bronze} bronze, \svgunit{silver} silver, and \svgunit{golden} golden neutral enemy Decks.
+    You may recruit any, or all of them by paying their cost.
+    Shuffle any un-hired ones back into their Decks.
+  \item The Grail may be sold at a trading post for 30 \svgunit{gold} \textit{or} \textbf{Search (3)} the relic Deck, twice.
+  \item When fighting the enemy at thier Town, they have a Citadel.
+    Don't forget to add the walls and arrow tower to make the battle a siege.
 \end{itemize}
 
 \end{multicols}
