--- a/metadata.tex
+++ b/metadata.tex
@@ -480,7 +480,7 @@
 
 \include{\sections/credits.tex}
 
-\include{\sections/notes.tex}
+% \include{\sections/notes.tex}
 
 \include{sections/back_cover.tex}
 
