--- a/draft-scenarios/coops/close_to_enemies.tex
+++ b/draft-scenarios/coops/close_to_enemies.tex
@@ -37,18 +37,28 @@ This Scenario is played over 7 Rounds.
 
 \subsection*{\MakeUppercase{Map Setup}}
 
-Take the following Map Tiles and arrange them as shown in the Scenario map layout.
+Take the following Map Tiles and arrange them as shown in the Scenario map layout:
 
 \begin{itemize}
   \item P × Starting (I) Map Tile
-  \item P × Far (II--III) Map Tile with the Settlement Field of the same terrain as player's Town.
-  \item 3P × Far (II--III) Map Tile without the Settlement Field. Each player takes three Map Tiles of their Faction's terrain with gold Mine, crystal Mine and one with anything. Each player shuffle their three Map Tiles and place two of them on the game board so that they correspond with the map template and are linked together. Each player keeps the last Tile for personal exploration.
+  \item 4P × Far (II--III) Map Tile of the same terrain as player's Town, one of which must contain a Settlement
 \end{itemize}
 
-Place Far (II--III) Map Tiles with Settlements that match your Faction's terrain, ensuring they align with the positions on the map represented by colored Cubes. Each pair of same-colored Cubes represents a Map Tile (I) and its corresponding Far (II--III) Map Tile with a Settlement.
-Each player place
+Place Far (II--III) Map Tiles with Settlements matching your Faction's terrain in positions marked by colored Cubes in the Scenario map layout.
+Each pair of same-colored Cubes indicates a Starting (I) Map Tile and its corresponding Far (II--III) Map Tile with a Settlement.
 
-\textit{Optional: If you want to spice up the game and deepen the cooperation between players, you can take all Far (II--III) Map Tile without the Settlement Field shuffle them and place them on map randomly lead by map-template. After that, create a shared pool for discovery from the remaining Tiles.}
+\textbf{Map Tile Pool (choose one):}
+
+\begin{itemize}
+  \item \textbf{Personal Pool:} Each player takes remaining 1~×~Far (II--III) Map Tile without a Settlement of the same terrain as player's Town
+  \item \textbf{Shared Pool:}
+  \begin{itemize}
+    \item Remove all Far (II--III) Map Tiles without Settlements from the Map
+    \item Shuffle all collected Map Tiles together
+    \item Return Map Tiles without Settlements to the Map in random order
+    \item After you setup Map Tiles in random order, remaining Map Tiles creates Shared Pool
+  \end{itemize}
+\end{itemize}
 
 \subsection*{\MakeUppercase{AI Hero Setup}}
 
@@ -59,7 +69,10 @@ Prepare an AI Deck for Settlement defenders.
 \textbf{Settlement defenders Spell Deck:} 1 × Magic Arrow
 
 \subsection*{\MakeUppercase{Victory Conditions}}
-Conquer all Settlements.
+
+\begin{itemize}
+   \item Conquer all Settlements.
+\end{itemize}
 
 \subsection*{\MakeUppercase{Defeat Conditions}}
 
@@ -112,17 +125,17 @@ Conquer all Settlements.
   \item Before combat, you may use your Building, Spell Book, and Population Tokens, as well as Might and Magic Cards. However, you cannot move your Hero.
   \item Each player must defend their own Town.
   \item If you have a Citadel, the \textit{Arrow Tower} attack is reduced. The attacks for first/second/third wave become 2/3/4 \svg{attack}.
-  \item This combat does not cost movement points.
+  \item This combat does not cost \svgeven{movement}.
   \item Refer to the \textit{Enemy Clan Armies} table for siege army strength.
   \item If your main Hero is in an allied Town (not Settlement) when a Clan attacks another allied Town without a main Hero present, you may help defend using your Might and Magic Cards. The allied Hero will use their Units, and you can help them by playing Cards from your hand during combat.
   \item Gain one \svg{experience} when successfully defending your Town, regardless of whether your main Hero participated.
 \end{itemize}
 
-\subsection*{\MakeUppercase{Settlements defenders}}
+\subsection*{\MakeUppercase{Settlements Defenders}}
 \begin{itemize}
   \item The strength of Settlement Defenders is determined by the \textit{Enemy Clan Armies} table (last row).
   \item After drawing an enemy army, a Player may discard one enemy Unit Card and draw a new Unit of the same Tier.
-  \item The combat does not cost Movement Points.
+  \item The combat does not cost \svgeven{movement}.
   \item In these combats, you must use AI Cards.
   \item After winning a combat, gain 2 \svg{experience}.
 \end{itemize}
