rewording2 map setup

--- a/draft-scenarios/coops/close_to_enemies.tex
+++ b/draft-scenarios/coops/close_to_enemies.tex
@@ -54,9 +54,9 @@ Each pair of same-colored Cubes indicates a Starting (I) Map Tile and its corres
   \item \textbf{Shared Pool:}
   \begin{itemize}
     \item Remove all Far (II--III) Map Tiles without Settlements from the Map
-    \item Shuffle all collected Map Tiles together
-    \item Return Map Tiles without Settlements to the Map in random order
-    \item After you setup Map Tiles in random order, remaining Map Tiles creates Shared Pool
+    \item Take collected Map Tiles from Map and remaining prepared Tiles and shuffle them together
+    \item Return Map Tiles to the Map in random order
+    \item Remaining Map Tiles creates Shared Pool
   \end{itemize}
 \end{itemize}
 
