--- a/draft-scenarios/coops/close_to_enemies.tex
+++ b/draft-scenarios/coops/close_to_enemies.tex
@@ -183,7 +183,7 @@ Prepare an AI Deck for Settlement defenders.
         & \lightcell[1.2]{\bronze \bronze \silver \silver \silver}
         & \lightcell[1.2]{\bronze \bronze \silver \silver \golden} \\
 
-      \darkcell[1.2]{Settlement defenders}
+      \darkcell[1.2]{Settlement Defenders}
         & \lightcell[1.2]{ \bronze \silver \silver \golden \golden}
         & \lightcell[1.2]{ \silver \golden \golden \golden \golden}
         & \lightcell[1.2]{ \golden \golden \golden \golden \golden}
