--- a/clash/battle_for_treasure_island.tex
+++ b/clash/battle_for_treasure_island.tex
@@ -80,12 +80,12 @@ Take the following Map Tiles and arrange them as shown in the Scenario map layou
 \textbf{\MakeUppercase{Note:}} The only island without a Starting (O) Map Tile is Treasure Island. The central tile of Treasure Island begins the game face up as shown in the scenario map layout - it should be a Near (IV--V) Map Tile with an Obelisk in the center.
 
 \subsection*{\MakeUppercase{Victory Conditions}}
-To win the Scenario, all other Players must be defeated. If only 2 Players remain at the end of Round 12, each Player draws up to their \svg{hand], takes any desired Town Actions, and fight a final Combat to determine the winner.
+To win the Scenario, all other Players must be defeated. If only 2 Players remain at the end of Round 12, each Player draws up to their \svg{hand}, takes any desired Town Actions, and fight a final Combat to determine the winner.
 
 \subsection*{\MakeUppercase{Defeat Conditions}}
 If your town is captured and you cannot recapture it within two rounds, you are removed from the game.
 
-If there are three or more Players remainings at the end of \nth{12] Round, all Players lose the scenario.
+If there are three or more Players remainings at the end of \nth{12} Round, all Players lose the scenario.
 
 \subsection*{\MakeUppercase{Timed Events}}
 
