--- a/clash/battle_for_treasure_island.tex
+++ b/clash/battle_for_treasure_island.tex
@@ -121,8 +121,32 @@ During this Scenario:
 
 \end{multicols*}
 
-% Uncomment and link a map image
-% \vspace{3em}
-% \begin{center}
-%   \includegraphics[width=0.6\paperwidth]{\_assets/maps/sentinels.png}
-% \end{center}
+\begin{minipage}{0.4\paperwidth}
+  \centering
+  \includegraphics[width=0.18\paperwidth]{\maps/TreasureIsland_2p.png}
+  \captionof{figure}{\textbf{2-PLAYER SCENARIO}}
+\end{minipage}
+\begin{minipage}{0.4\paperwidth}
+  \centering
+  \includegraphics[width=0.36\paperwidth]{\maps/TreasureIsland_3p.png}
+  \captionof{figure}{\textbf{3-PLAYER SCENARIO}}
+\end{minipage}
+\vspace{1em}
+\linebreak
+\begin{minipage}{0.4\paperwidth}
+  \centering
+  \includegraphics[width=0.38\paperwidth]{\maps/TreasureIsland_4p.png}
+  \captionof{figure}{\textbf{4-PLAYER SCENARIO}}
+\end{minipage}
+\begin{minipage}{0.4\paperwidth}
+  \centering
+  \includegraphics[width=0.38\paperwidth]{\maps/TreasureIsland_5p.png}
+  \captionof{figure}{\textbf{5-PLAYER SCENARIO}}
+\end{minipage}
+\vspace{1em}
+\linebreak
+\begin{minipage}{0.4\paperwidth}
+  \centering
+  \includegraphics[width=0.38\paperwidth]{\maps/TreasureIsland_6p.png}
+  \captionof{figure}{\textbf{6-PLAYER SCENARIO}}
+\end{minipage}
