--- a/clash/battle_for_treasure_island.tex
+++ b/clash/battle_for_treasure_island.tex
@@ -77,7 +77,7 @@ Take the following Map Tiles and arrange them as shown in the Scenario map layou
   \item 1 × Center (VI--VII) Map Tile, which must contain the Dragon Utopia
 \end{itemize}
 
-\textbf{\MakeUppercase{Note:}} The only island without a Starting (O) Map Tile is Treasure Island. The central tile of Treasure Island begins the game face up as shown in the scenario map layout - it should be a Near (IV--V) Map Tile with an Obelisk in the center.
+\textbf{\MakeUppercase{Note:}} The only island without a Starting (I) Map Tile is Treasure Island. The central tile of Treasure Island begins the game face up as shown in the scenario map layout - it should be a Near (IV--V) Map Tile with an Obelisk in the center (ignore the Map Tile shown in the diagram).
 
 \subsection*{\MakeUppercase{Victory Conditions}}
 To win the Scenario, all other Players must be defeated. If only 2 Players remain at the end of Round 12, each Player draws up to their \svg{hand}, takes any desired Town Actions, and fight a final Combat to determine the winner.
