--- a/draft-scenarios/clash/treasure_island.tex
+++ b/draft-scenarios/clash/treasure_island.tex
@@ -1,5 +1,5 @@
 % !TeX spellcheck = en_US
-\addscenariosection{1}{Clash Scenario}{The Battle for Treasure Island}{\images/title.png}
+\addscenariosection{1}{Clash Scenario}{The Battle for Treasure Island}{\images/berserk.png}
 
 \begin{multicols*}{2}
 
