--- a/draft-scenarios/clash/treasure_island.tex
+++ b/draft-scenarios/clash/treasure_island.tex
@@ -1,5 +1,5 @@
 % !TeX spellcheck = en_US
-\addscenariosection{1}{Clash Scenario}{The Battle for Treasure Island}{\images/berserk.png}
+\addscenariosection{2}{Clash Scenario}{The Battle for Treasure Island}{\images/berserk.png}
 
 \begin{multicols*}{2}
 
@@ -30,6 +30,7 @@ This Scenario plays out over 12 Rounds.
 \begin{itemize}
   \item \svgunit{bronze} Dwelling
   \item Citadel
+\end{itemize}
 
 \textbf{Additional Bonus:} Each player may gain a War Machine of their choice at no cost.
 
@@ -92,10 +93,12 @@ If there are three or more Players remainings at the end of \nth{12} Round, all 
 \textbf{\nth{3} and \nth{7} Rounds:}
 \begin{itemize}
   \item Remove all Black Cubes from every Water Wheel, Windmill, Mystical Gardens, and Fountains of Youth on the map.
+\end{itemize}
 
 \textbf{\nth{6} Round:}
 \begin{itemize}
   \item If any Near (IV--V) Map Tiles are face down, reveal them. Players whose Starting (I) Map Tile is closest to each Near (IV--V) Map Tile may choose its orientation.
+\end{itemize}
 
 \subsection*{\MakeUppercase{Additional Rules}}
 
