--- a/draft-scenarios/clash/treasure_island.tex
+++ b/draft-scenarios/clash/treasure_island.tex
@@ -90,7 +90,7 @@ If there are three or more Players remainings at the end of \nth{12} Round, all 
 
 \subsection*{\MakeUppercase{Timed Events}}
 
-\textbf{\nth{3} and \nth{7} Rounds:}
+\textbf{\nth{3} Round:}
 \begin{itemize}
   \item Remove all Black Cubes from every Water Wheel, Windmill, Mystical Gardens, and Fountains of Youth on the map.
 \end{itemize}
@@ -98,6 +98,11 @@ If there are three or more Players remainings at the end of \nth{12} Round, all 
 \textbf{\nth{6} Round:}
 \begin{itemize}
   \item If any Near (IV--V) Map Tiles are face down, reveal them. Players whose Starting (I) Map Tile is closest to each Near (IV--V) Map Tile may choose its orientation.
+\end{itemize}
+
+\textbf{\nth{7} Round:}
+\begin{itemize}
+  \item Remove all Black Cubes from every Water Wheel, Windmill, Mystical Gardens, and Fountains of Youth on the map.
 \end{itemize}
 
 \subsection*{\MakeUppercase{Additional Rules}}
