--- a/draft-scenarios/clash/treasure_island.tex
+++ b/draft-scenarios/clash/treasure_island.tex
@@ -78,15 +78,15 @@ Take the following Map Tiles and arrange them as shown in the Scenario map layou
   \item 1 × Center (VI--VII) Map Tile, which must contain the Dragon Utopia
 \end{itemize}
 
-\textbf{\MakeUppercase{Note:}} The only island without a Starting (I) Map Tile is Treasure Island. The central tile of Treasure Island begins the game face up as shown in the scenario map layout - it should be a Near (IV--V) Map Tile with an Obelisk in the center (ignore the Map Tile shown in the diagram).
+\textbf{\MakeUppercase{Note:}} The only island without a Starting (I) Map Tile is Treasure Island. The central Tile of Treasure Island begins the game face up as shown in the Scenario map layout - it should be a Near (IV--V) Map Tile with an Obelisk in the center (ignore the Map Tile shown in the diagram).
 
 \subsection*{\MakeUppercase{Victory Conditions}}
 To win the Scenario, all other Players must be defeated. If only 2 Players remain at the end of Round 12, each Player draws up to their \svg{hand}, takes any desired Town Actions, and fight a final Combat to determine the winner.
 
 \subsection*{\MakeUppercase{Defeat Conditions}}
-If your town is captured and you cannot recapture it within two rounds, you are removed from the game.
+If your town is captured and you cannot recapture it within two of your Turns, you are removed from the game.
 
-If there are three or more Players remainings at the end of \nth{12} Round, all Players lose the scenario.
+If there are three or more Players remainings at the end of \nth{12} Round, all Players lose the Scenario.
 
 \subsection*{\MakeUppercase{Timed Events}}
 
@@ -112,11 +112,11 @@ During this Scenario:
 \begin{itemize}
   \item When a player Visits an Obelisk, they may choose to teleport to any other revealed Obelisk. If an Obelisk is not visible, it cannot be teleported to. Teleporting does not cost any \svg{movement}.
   \item Travel between islands is not possible other than Obelisks; e.g. Dimension Door, Angel Wings, and similar effects may not be used to travel between islands.
-  \item Place a Black Cube on all empty fields on Treasure Island as tiles are revealed. The first Hero to visit an empty field with a Black Cube may remove the Black Cube in order to roll 1 \svg{treasure} or 1 \svg{resource}.
+  \item Place a Black Cube on all empty Fields on Treasure Island as Tiles are revealed. The first Hero to visit an empty Field with a Black Cube may remove the Black Cube in order to roll 1 \svg{treasure} or 1 \svg{resource}.
   \item The first time a Player defeats the Dragon Utopia in Neutral Combat, they may Recruit any defeated Neutral Unit for half its Recruitment cost. Place a Faction Cube on the Dragon Utopia to indicate Players that have taken this action.
-  \item Players may defend their Starting Town with their army when it is attacked regardless of where they are on the map. They may not use their deck of Might and Magic unless they \svg{pay_v2} 15 \svg{gold}.
+  \item Players may defend their Starting Town with their army when it is attacked regardless of where they are on the map. They may not use their Deck of Might and Magic unless they \svg{pay_v2} 15 \svg{gold}.
   \item If a Player's Town is captured by an Enemy Hero, the Player does not receive Resources during Resource Rounds unless they recapture their Town. They may take all other Town Actions as normal.
-  \item If a Player captures an Enemy Player's Starting Town, treat it as a Settlement; you may gain the same bonus as capturing a Settlement, but may not use the Walls, Gate, or Arrow Tower cards if defending that field.
+  \item If a Player captures an Enemy Player's Starting Town, treat it as a Settlement; you may gain the same bonus as capturing a Settlement, but may not use the Walls, Gate, or Arrow Tower Cards if defending that Field.
 \end{itemize}
 
 \vspace*{\fill}
