--- a/draft-scenarios/clash/treasure_island.tex
+++ b/draft-scenarios/clash/treasure_island.tex
@@ -102,7 +102,7 @@ If there are three or more Players remainings at the end of \nth{12} Round, all 
 
 \textbf{\nth{8} Round:}
 \begin{itemize}
-  \item Remove all Black Cubes from every Water Wheel, Windmill, Mystical Gardens, and Fountains of Youth on the map.
+  \item Repeat events of Round 4.
 \end{itemize}
 
 \subsection*{\MakeUppercase{Additional Rules}}
