[Bloody Grail] Buff Grail Knight Obelisks

--- a/clash/bloody_grail.tex
+++ b/clash/bloody_grail.tex
@@ -83,9 +83,9 @@ During this Scenario:
   \begin{enumerate}[leftmargin=15pt]
     \item \textbf{[Cleanse]} The player receives one of the following boons, depending on how many Obelisks they have Visited:
     \begin{enumerate}
-      \item \textbf{[1st Obelisk]} Roll 2 \svg{treasure} and choose 1 to resolve; then, gain \svg{morale_negative}.
+      \item \textbf{[1st Obelisk]} You gain a Secondary Hero. Place their model on this Field. If you already have a Secondary Hero, gain 6 \svg{gold} instead. Then, choose one enemy player to discard 1 random Card from their hand.
       \item \textbf{[2nd Obelisk]} Increase your \svg{gold}, \svg{building_materials}, or \svg{valuables} income by 1 step.
-      \item \textbf{[3rd Obelisk]} You gain a Secondary Hero. Place their model on this Field. If you already have a Secondary Hero, gain 3 \svg{gold} instead. Then, choose one enemy player to discard 2 random Cards from their hand.
+      \item \textbf{[3rd Obelisk]} Roll 2 \svg{treasure} and choose 1 to resolve; then, gain \svg{morale_positive} and \svg{movement}.
       \item \textbf{[4th Obelisk]} Remove up to 4 Cards from your hand, except Statistic Cards; then, search each corresponding Deck for a Card of your choice and put it in your hand.
     \end{enumerate}
     \item \textbf{[Sacrifice]} Remove a * Faction Unit Card from your Unit Deck in exchange for:
