--- a/translations/sentinels.tex/pl.po
+++ b/translations/sentinels.tex/pl.po
@@ -254,8 +254,8 @@ msgid ""
 msgstr ""
 "\\begin{itemize}\n"
 "  \\item 2 × Początkowy (I) Kafelek Mapy\n"
-"  \\item 4 × Bliski (IV--V) Kafelek Mapy\n"
-"  \\item 4 × Daleki (II--III) Kafelek Mapy z Obeliskiem\n"
+"  \\item 4 × Daleki (II--III) Kafelek Mapy\n"
+"  \\item 4 × Bliski (IV-V) Kafelek Mapy z Obeliskiem\n"
 "\\end{itemize}\n"
 "\n"
 
