--- a/translations/castle_sicilian_dragon.tex/pl.po
+++ b/translations/castle_sicilian_dragon.tex/pl.po
@@ -7,15 +7,17 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
 "POT-Creation-Date: 2025-01-14 14:06+0100\n"
-"PO-Revision-Date: 2024-12-03 20:31+0100\n"
-"Last-Translator: Automatically generated\n"
-"Language-Team: none\n"
+"PO-Revision-Date: 2025-01-22 14:01+0000\n"
+"Last-Translator: Damian Sobkowiak <sopek1996@gmail.com>\n"
+"Language-Team: Polish <https://hosted.weblate.org/projects/homm3bg-fan-made-"
+"mission-book/campaigns/castle_sicilian_dragon/pl/>\n"
 "Language: pl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=(n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 "
 "|| n%100>=20) ? 1 : 2);\n"
+"X-Generator: Weblate 5.10-dev\n"
 
 #. type: multicols*
 #: coops/sentinels.tex:5 coops/titans_stronghold.tex:5
@@ -182,7 +184,7 @@ msgid ""
 "\\textbf{Faction:} Necropolis\n"
 "\n"
 msgstr ""
-"\\textbf{Frakcja:} Nekroploia\n"
+"\\textbf{Frakcja:} Nekropolia\n"
 "\n"
 
 #. type: multicols*
