[PL] Fix a typo in Titans' Stronghold

--- a/translations/titans_stronghold.tex/pl.po
+++ b/translations/titans_stronghold.tex/pl.po
@@ -315,10 +315,10 @@ msgid ""
 "\n"
 msgstr ""
 "\\begin{itemize}\n"
-"  \\item P × Początkowy (I) Kafelek Mapy\n"
-"  \\item 2P × Daleki (II--III) Kafelek Mapy\n"
-"  \\item 2P × Bliski (IV--V) Kafelek Mapy\n"
-"  \\item (P + 1) × Centralny (VI--VII) Kafelek Mapy\n"
+"  \\item G × Początkowy (I) Kafelek Mapy\n"
+"  \\item 2G × Daleki (II--III) Kafelek Mapy\n"
+"  \\item 2G × Bliski (IV--V) Kafelek Mapy\n"
+"  \\item (G + 1) × Centralny (VI--VII) Kafelek Mapy\n"
 "\\end{itemize}\n"
 "\n"
 
