--- a/draft-scenarios/clash/dragon_valley.tex
+++ b/draft-scenarios/clash/dragon_valley.tex
@@ -44,8 +44,8 @@ Take the following Map Tiles and arrange them as shown in the Scenario map layou
 \textbf{AND}
 
 \begin{itemize}
-  \textbf{1} × Starting (I) Map tile - with \textit{Dragon Utopia} for 2-3 players \textbf{OR}
-  \textbf{2} × Starting (I) Map tile - with \textit{Dragon Utopia} for 4 players.
+  \item \textbf{1} × Starting (I) Map tile - with \textit{Dragon Utopia} for 2-3 players \textbf{OR}
+  \item \textbf{2} × Starting (I) Map tile - with \textit{Dragon Utopia} for 4 players.
 \end{itemize}
 
 \subsection*{\MakeUppercase{Victory Conditions}}
